Fix papers.json fetch path for GitHub Pages

--- a/papers.html
+++ b/papers.html
@@ -6,7 +6,7 @@
         papersList.innerHTML = '<p>Loading papers...</p>';
         
         try {
-            const response = await fetch('data/papers.json');
+            const response = await fetch('/BST236_hw1/data/papers.json');
             if (!response.ok) {
                 throw new Error(`HTTP error! status: ${response.status}`);
             }
